Fix overflow of project title

--- a/Portal/wwwroot/css/editor.css
+++ b/Portal/wwwroot/css/editor.css
@@ -38,6 +38,7 @@ p {
 #tree-container > .header {
     padding: 2px 0 2px 10px;
     background-color: #c6cfdf;
+    overflow: hidden;
 }
 
 ul.fancytree-container {
